# exam-preparation-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  app.py  backup.sql  config.py  db.py  db_test.py  docker-compose.yml  mise.toml  pyproject.toml  requirements.txt
backend/db/: schema.sql
backend/src/exam-prep-tracker/: app.py  auth.py  db.py
backend/src/exam_prep_tracker/: app.py  auth.py  db.py
backend/src/exam_prep_tracker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/src/exam_preparation_tracker_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/Exam-prep-tracker/: mise.toml  package-lock.json  package.json  pnpm-lock.yaml
frontend/Exam-prep-tracker/src/: App.jsx  api.js
frontend/Exam-prep-tracker/src/lib/: api.js
frontend/Exam-prep-tracker/src/pages/: Login.jsx  Signup.jsx
