[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "exam-preparation-tracker-backend"
version = "0.1.0"
description = "Backend API for Exam Preparation Tracker"
requires-python = ">=3.10"

dependencies = [
  "flask",
  "flask-cors",
  "python-dotenv",
  "sqlalchemy",
  "flask-jwt-extended",
  "passlib[bcrypt]",
  "psycopg2-binary"
]

[tool.uv]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
